--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   dio: ^4.0.0
   hexcolor: ^2.0.5
   shared_preferences: ^2.0.7
-#  webview_flutter: ^2.0.12
+  webview_flutter: ^2.0.12
 
 
 dev_dependencies:
